# qemu_mips_simd

./: run-for-parser-v3.sh  run.sh
CABAC/: main.cpp
CAVLC/: cavlc.h  cavlc_tables.h  main.cpp  msa_blocks_cavlc.h  msa_cavlc.h
Combinations_of_keys/combinations_generator/: .gitignore  build.sbt  file.txt  keys.txt  readme.md
ConvolutionMatrix/: ConvolutionReport.docx  bitmap_image.hpp  test_cpp.cpp
FDCT-IDCT/: main.c  my_dct.h
FTQ/ftq_default/: ftq.cpp  ftq.h  main.cpp  matrix_ops.cpp  matrix_ops.h  matrix_wrapper.h
FTQ/ftq_rns/: arithmetic.cpp  arithmetic.h  convertation.cpp  convertation.h  ftq.cpp  ftq.h  main.cpp  matrices.cpp  matrices.h  sign.cpp  sign.h  tools.cpp  tools.h
Intra-prediction/default_realization/: intra_prediction.cpp  mode_functions.h
Motion Estimation/: default_me_tss.cpp  msa_me_tss_array.cpp  msa_me_tss_bitmap.cpp
MotionCompensation/: Motion_compensation.docx  msa_1_pix.cpp  nativ.cpp  test_cpp.cpp  test_cpp.s  timer.cpp
Python_parser/: parser_v2.py  МЕТРИКИ_18_12.docx
Python_parser/3rd version/: log_sub.py  parser_v3.py
Python_parses/: parser.py  parser_v2.py
Quantization/: README.md  mainMSA.cpp
RGB-YUV/: README.md  mainMSA.cpp  timer.cpp
profiling/: parameters.txt
profiling/1/: key.txt
profiling/10/: key.txt
profiling/11/: key.txt
profiling/12/: key.txt
profiling/13/: MotionEstimation_log_msa  key.txt
profiling/14/: CABAC_log_msa  key.txt
profiling/15/: key.txt
profiling/16/: FDCT-IDCT_log_msa  key.txt
profiling/17/: key.txt
profiling/18/: key.txt
profiling/19/: key.txt
profiling/2/: key.txt
profiling/20/: key.txt
profiling/21/: key.txt
profiling/22/: key.txt
profiling/23/: key.txt
profiling/24/: key.txt
profiling/25/: key.txt
profiling/3/: key.txt
profiling/4/: key.txt
profiling/5/: key.txt
profiling/6/: key.txt
profiling/7/: key.txt
profiling/8/: key.txt
profiling/9/: key.txt
qemu/: .cproject  .project  block.d  blockjob.d  config-host.h-timestamp  config-host.mak  config.status  cpus-common.d  ivshmem-client  ivshmem-server  qapi-event.d  qapi-types.d  qapi-types.h  qapi-visit.c  qapi-visit.d  qapi-visit.h  qemu-bridge-helper  qemu-bridge-helper.d  qemu-ga  qemu-img.d  qemu-io-cmds.d  qemu-io.d  qemu-nbd.d  qemu-options.def  qmp-commands.h  qmp-introspect.c  qmp-introspect.d  qmp-marshal.c  replication.d  trace-events-all  trace-root.d  trace-root.h-timestamp
qemu_cpv/: .gitignore  Makefile  Makefile.target  configure  configure.duna  exec.c  qemu-options.hx  run_rio.sh  vl.c
qemu_cpv/cp2/: CMakeLists.txt  Makefile  insn_code.c  insn_code.h  instr.c  instr.h  instr_float.h  instr_float.inc  instr_float.m4  instr_index.inc  instr_index.m4  k128cp2.h  k128cp2_config.xml  k128cp2_config.xmlc  k128cp2_config_dumpoff.xml  k128cp2_config_dumpon.xml  k128cp2_resetstate.xml  k128cp2_resetstate.xmlc  k128cp2_state.xml  machine.c  machine.h  observer.c  observer.h  options.c  options.h  prockern.c  prockern.h  prockern_access.c  prockern_access.h  system.c  system.h  xml2string.sh
qemu_cpv/cp2/k128cp2elfun/: CMakeLists.txt  k128cp2elfun_atanc.c  k128cp2elfun_common.c  k128cp2elfun_exp2.c  k128cp2elfun_log2c.c  k128cp2elfun_recip.c  k128cp2elfun_rrcos.c  k128cp2elfun_rrlog2.c  k128cp2elfun_rrsin.c  k128cp2elfun_sinc.c  k128cp2elfun_sqrt.c
qemu_cpv/cp2/k128cp2elfun/include/: k128cp2elfun.h  local.h
(+541 files in other folders)
